Update menu header on mobile and tablet, fix file responsive, fix how it work css, add site map on navigate

--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -6,7 +6,7 @@
     --primary-font: 'cambria';
 
     /* Index.html -> Header */
-    --header-height-pc: 115px;
+    --header-height: 115px;
     --width-logo-pc: 64px;
     --font-size-logo-pc: 3.6rem;
 
